<resources>
    <string-array name="calendar_month_string_array">
        <item>一月</item>
        <item>二月</item>
        <item>三月</item>
        <item>四月</item>
        <item>五月</item>
        <item>六月</item>
        <item>七月</item>
        <item>八月</item>
        <item>九月</item>
        <item>十月</item>
        <item>十一月</item>
        <item>十二月</item>
    </string-array>
    <string-array name="terrestrial_branch_string_array">
        <item>子</item>
        <item>丑</item>
        <item>寅</item>
        <item>卯</item>
        <item>辰</item>
        <item>巳</item>
        <item>午</item>
        <item>未</item>
        <item>申</item>
        <item>酉</item>
        <item>戌</item>
        <item>亥</item>

    </string-array>
    <string-array name="terrestrial_branch_string_array_1">
        <item>子时</item>
        <item>丑时</item>
        <item>寅时</item>
        <item>卯时</item>
        <item>辰时</item>
        <item>巳时</item>
        <item>午时</item>
        <item>未时</item>
        <item>申时</item>
        <item>酉时</item>
        <item>戌时</item>
        <item>亥时</item>

    </string-array>
    <string-array name="calendar_week_string_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>
    <string name="placeholder_month">%d 月</string>
    <string-array name="fortune_stick">
        <item>运气</item>
        <item>爱情</item>
        <item>事业</item>
        <item>财运</item>
        <item>人际</item>
        <item>健康</item>
    </string-array>
    <string-array name="fortune_report">
        <item>无敌</item>
        <item>好运</item>
        <item>平稳</item>
        <item>还行</item>
        <item>加油</item>
    </string-array>
    <string-array name="fortune_today">
        <item>运气指数</item>
        <item>事业指数</item>
        <item>爱情指数</item>
        <item>财运指数</item>
        <item>人际指数</item>
        <item>健康指数</item>
    </string-array>
    <string-array name="fortune_location">
        <item>避难位</item>
        <item>人缘位</item>
        <item>病床位</item>
        <item>财运位</item>
        <item>幸运色</item>
        <item>幸运数</item>
    </string-array>
    <string-array name="fortune_time">
        <item>今天</item>
        <item>明天</item>
        <item>后天</item>
    </string-array>
    <string name="app_name_1">孔明在线</string>
    <string name="app_account">孔明在线账号</string>
    <string name="nav_mine">我的</string>
    <string name="nav_find">发现</string>
    <string name="nav_master">师傅</string>
    <string name="nav_calculation">测算</string>
    <string name="nav_fate_book">命书</string>
    <string name="nav_fortune">运势</string>
    <string name="successful">成功</string>
    <string name="loading">请求中…</string>
    <string name="failure_title">您访问的页面努力加载中，请耐心等待</string>
    <string name="hint_input_mobile_number">请输入手机号</string>
    <string name="hint_input_mobile_number_1">填写手机号</string>
    <string name="hint_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="go_login">去登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="forget_password_1">忘记密码?</string>
    <string name="register">注册</string>
    <string name="tips_login_register">还没有孔明在线账号？</string>
    <string name="tips_register_login">已有孔明在线账号？</string>
    <string name="hint_input_verification_code">请输入验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="hint_input_register_password">请输入密码「8–20个字符，不可以是纯数字」</string>
    <string name="mobile_register">手机注册</string>
    <string name="hint_input_verify_password">再次输入密码</string>
    <string name="hint_input_invite_code">邀请码（非必填）</string>
    <string name="pay_ok">支付成功</string>
    <string name="pay_failed">支付失败</string>
    <string name="tv_failed">失败</string>
    <string name="pay_ex">支付异常</string>
    <string name="with">和</string>
    <string name="register_protocol">《用户协议》</string>
    <string name="register_privacy_policy">《隐私政策》</string>
    <string name="agree">我同意</string>
    <string name="next">下一步</string>
    <string name="complete">完成</string>
    <string name="default_phone_area_code">+86</string>
    <string name="cancel">取消</string>
    <string name="hint_search_area_code">请输入国家或者地区</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="fortune_report_tips">七日运势走势图</string>
    <string name="signed_name">姓名:\t</string>
    <string name="signed_sex">性别:\t</string>
    <string name="signed_birth_place">出生地点:\t</string>
    <string name="signed_date_birth">出生日期:\t</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="enter">进入</string>
    <string name="quit">退出</string>
    <string name="signed_micro">微状:</string>
    <string name="signed_remember">切记:</string>
    <string name="start_main">开启孔明之旅</string>
    <string name="start_main_1">进入孔明在线</string>
    <string name="error_tips">“支付密码输入错误”</string>
    <string name="settings">系统设置</string>
    <string name="account_security">账号安全</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="terms_details">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="contact_us">联系我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="apply_master">申请师傅</string>
    <string name="not_applied">未申请</string>
    <string name="tv_customer_service">联系客服</string>
    <string name="dialog_confirm_clear">确定要清除缓存吗？</string>
    <string name="language">语言</string>
    <string name="simplified_chinese">简体中文</string>
    <string name="traditional_chinese">繁體中文</string>
    <string name="change_login_password">修改登录密码</string>
    <string name="change_fund_password">修改资金密码</string>
    <string name="safety_verification">安全验证</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="alter_password">修改密码</string>
    <string name="hint_apply_master">请自我介绍</string>
    <string name="apply_become_master">申请成为师傅</string>
    <string name="hint_contact_information">请填写您的联系电话</string>
    <string name="submit_apply">提交申请</string>
    <string name="my_record">我的战绩</string>
    <string name="pay_method">付款方式</string>
    <string name="now_pay">立即付款</string>
    <string name="personal_information">个人信息</string>
    <string name="avatar">头像</string>
    <string name="nickname">名称</string>
    <string name="live_area">居住地区</string>
    <string name="mine_user_id">UID</string>
    <string name="name">姓名</string>
    <string name="sex">性别</string>
    <string name="birth_place">出生地点</string>
    <string name="date_birth">出生日期</string>
    <string name="hint_alter_nickname">请输入昵称</string>
    <string name="vip_tips_txt">开通会员，尊享待遇</string>
    <string name="fortune_toptic">运势课题</string>
    <string name="fortune_add_fortune">增运提示</string>
    <string name="vip_opend">已开通</string>
    <string name="vip_tips">暂不支持会员升级</string>
    <string name="input_date_birth">请输入出生日期</string>
    <string name="for_whom_ask_question">为谁提问：</string>
    <string name="self">自己</string>
    <string name="other">其TA</string>
    <string name="signed_question_type">问题类型:\t</string>
    <string name="signed_question_title">问题标题:\t</string>
    <string name="hint_input_title">请输入标题</string>
    <string name="hint_input_question">请输入问题描述200字内</string>
    <string name="score">评分</string>
    <string name="price">价格</string>
    <string name="ask_things">问事</string>
    <string name="number_answers">解答数</string>
    <string name="copy">复制</string>
    <string name="withdraw_toekn">提币</string>
    <string name="deposit_token">充币</string>
    <string name="conversion">兑换</string>
    <string name="transfer">划转</string>
    <string name="financial_records">财务记录</string>
    <string name="system_message">系统消息</string>
    <string name="my_message">我的消息</string>
    <string name="my_homepage">我的主页</string>
    <string name="my_answer">我的解答</string>
    <string name="my_homepage_1">我的主页&#8195;></string>
    <string name="consult_now">立即咨询</string>
    <string name="view_now">立即查看</string>
    <string name="open_now">立即开通</string>
    <string name="photo_show">照片展示</string>
    <string name="master_introduction">师傅介绍</string>
    <string name="my_specialty">我的擅长</string>
    <string name="my_service">我的服务</string>
    <string name="signed_areas_expertise">擅长领域:\t</string>
    <string name="find_master">找师傅</string>
    <string name="ask">问</string>
    <string name="person">人</string>
    <string name="my_questions">我的问题</string>
    <string name="my_balance">我的资产</string>
    <string name="all">全部</string>
    <string name="receiving_order">接单中</string>
    <string name="answering">解答中</string>
    <string name="completed">已完成</string>
    <string name="closed">已关闭</string>
    <string name="pay">支付</string>
    <string name="new_book">新建</string>
    <string name="edit">编辑</string>
    <string name="fate_book">命书</string>
    <string name="enter_fate_book">进入命书</string>
    <string name="later">稍后</string>
    <string name="now_ask_questions">现在去提问</string>
    <string name="payment_successful">支付成功</string>
    <string name="hint_input_amount">输入数量</string>
    <string name="withdraw_address">提币地址</string>
    <string name="paste">粘贴</string>
    <string name="amount">数量</string>
    <string name="nikeName">昵称</string>
    <string name="placeholder_available_balance">可用：%s %s</string>
    <string name="placeholder_handling_fee">手续费 %s</string>
    <string name="signed_arrival_quantity">到账数量：</string>
    <string name="save_rq_code">保存二维码</string>
    <string name="deposit_address">提币地址</string>
    <string name="copy_link">复制链接</string>
    <string name="chain_type">链类型</string>
    <string name="chain_type_erc_20">ERC 20</string>
    <string name="invite_now">立即邀请</string>
    <string name="my_invitation">我的邀请</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="total_assets_converted">总资产折合</string>
    <string name="confirm">确定</string>
    <string name="hint_paste_address">请输入或粘贴地址</string>
    <string name="hint_enter_paste">请输入或粘贴</string>
    <string name="hint_input_conversion_amount">输入兑换数量</string>
    <string name="tips_conversion">说明：以实际成交汇率为准</string>
    <string name="return_today">返回今天</string>
    <string name="default_empty_title">暂无内容</string>
    <string name="save">保存</string>
    <string name="alter_nickname">修改昵称</string>
    <string name="alter_name">修改姓名</string>
    <string name="hint_alter_master_introduction">输入详情介绍200字。</string>
    <string name="hint_alter_name">请输入姓名</string>
    <string name="modify_name">修改名字</string>
    <string name="type">类型</string>
    <string name="receive_order">接单</string>
    <string name="service_settings">服务设置</string>
    <string name="service">服务</string>
    <string name="photo">照片</string>
    <string name="payment_method">支付方式</string>
    <string name="we_chat">微信</string>
    <string name="alipay">支付宝</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="ask_questions">提问题</string>
    <string name="submit">提交</string>
    <string name="asked_successfully">提问成功</string>
    <string name="back_find_page">返回发现页</string>
    <string name="my_questions_answer">我的问答</string>
    <string name="question_additional">师傅前往接单中，请耐心等待</string>
    <string name="my_inter">我的权益</string>
    <string name="my_ask">我的问答</string>
        <string name="setting_fortune_warning">运势提醒</string>
    <string name="error_selected_birth_place">请选择出生地点</string>
    <string name="error_selected_birth_date">请选择出生日期</string>
    <string name="please_fill_transfer_uid">请填写划转UID</string>
    <string name="please_fill_transfer_uid_1">请输入UID</string>
    <string name="please_fill_transfer_amount">请填写划转数量</string>
    <string name="hint_enter_amount">请输入数量</string>
    <string name="tips_supplement_information">说明：务必选择准确时间，以免影响测算准确率。</string>
    <string name="homepage">首页</string>
</resources>