<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/selector_nav_fortune"
        android:id="@+id/nav_main"
        android:title="@string/homepage" />

    <item
        android:icon="@drawable/selector_nav_books"
        android:id="@+id/nav_book"
        android:title="@string/nav_fate_book" />

    <item
        android:icon="@drawable/selector_nav_shifu"
        android:id="@+id/nav_find"
        android:title="@string/nav_master" />
    <item
        android:icon="@drawable/selector_nav_find"
        android:id="@+id/nav_calculation"
        android:title="@string/nav_calculation" />
    <item
        android:icon="@drawable/selector_nav_mine"
        android:id="@+id/nav_mine"
        android:title="@string/nav_mine" />

</menu>