<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/dp_24"
    android:paddingRight="@dimen/dp_24">

    <TextView
        android:id="@+id/tv_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="@dimen/dp_72"
        android:drawableEnd="@drawable/ic_more_black"
        android:gravity="center"
        android:text="@string/default_phone_area_code"
        android:textColor="?attr/textColorPrimary" />

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_input_mobile_number"
        android:imeOptions="actionNext"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <EditText
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_input_verification_code"
            android:imeOptions="actionNext"
            android:inputType="number" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/but_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:enabled="false"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textSize="14sp"
            android:background="@drawable/draw_btn_ebb451_4"
            android:text="@string/send_verification_code" />

    </LinearLayout>

    <Button
        android:id="@+id/but_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:enabled="false"
        android:text="@string/next" />
</LinearLayout>